--- a/data/docs/watson-studio-integrate-with-github-how-to.yaml
+++ b/data/docs/watson-studio-integrate-with-github-how-to.yaml
@@ -5,6 +5,6 @@ spec:
   appName: watson-studio
   displayName: How to create a project that's integrated with Github?
   description: |-
-    How to add assets in the Git repository in a project
+    How to add assets in the Git repository in a project.
   url: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/wsj/manage-data/git-integration.html
   durationMinutes: 10
