--- a/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
+++ b/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
@@ -5,6 +5,6 @@ spec:
   appName: watson-studio
   displayName: Jupyter Notebooks in Watson Studio
   description: |-
-    This video covers the basics for working with Jupyter notebooks in Watson Studio
+    This video covers the basics for working with Jupyter notebooks in Watson Studio.
   url: https://video.ibm.com/channel/23952663/video/cpd35-ws-notebook-basics
   durationMinutes: 3
