--- a/data/docs/watson-studio-setup-openscale-how-to.yaml
+++ b/data/docs/watson-studio-setup-openscale-how-to.yaml
@@ -5,6 +5,6 @@ spec:
   appName: watson-studio
   displayName: How to set up Watson OpenScale?
   description: |-
-    Track and measure outcomes from models with OpenScale
+    Track and measure outcomes from models with OpenScale.
   url: https://www.ibm.com/support/knowledgecenter/SSQNUZ_3.5.0/wsj/model/getting-started.html
   durationMinutes: 10
