--- a/data/quickstarts/deploy-python-model-quickstart.yaml
+++ b/data/quickstarts/deploy-python-model-quickstart.yaml
@@ -2,10 +2,10 @@ kind: ConsoleQuickStart
 metadata:
   name: deploy-python-model
 spec:
-  displayName: Deploying a sample Python application using Flask and OpenShift
+  displayName: Deploying a sample Python application using Flask and OpenShift.
   durationMinutes: 10
   icon: 'images/jupyterhub.svg'
-  description: How to deploy a Python model using Flask and OpenShift
+  description: How to deploy a Python model using Flask and OpenShift.
   prerequisites: [You completed the "Create a Jupyter notebook" quick start.]
   introduction: |-
     ### This quick start shows you how to deploy a Python Model.
