--- a/data/quickstarts/seldon-deploy-canary-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-canary-quickstart.yaml
@@ -5,7 +5,7 @@ spec:
   displayName: Launch a SKLearn model and update model by canarying
   durationMinutes: 10
   icon: 'images/seldon.svg'
-  description: How to perform a canary promotion of a Scikit-Learn model
+  description: How to perform a canary promotion of a Scikit-Learn model.
   prerequisites: [You completed the "Create a Jupyter notebook" quick start.]
   introduction: |-
     ### This quick start shows you how to launch a SKLearn model and update model by canarying.
