--- a/data/quickstarts/seldon-deploy-explainer-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-explainer-quickstart.yaml
@@ -5,7 +5,7 @@ spec:
   displayName: See predictions and explanations for a deployed SKLearn model
   durationMinutes: 10
   icon: 'images/seldon.svg'
-  description: See predictions and explanations for deployed income classifier model
+  description: See predictions and explanations for deployed income classifier model.
   introduction: |-
     ### This quick start shows you how to launch an income classifier model and see explanations.
     Seldon Deploy is a specialist set of tools designed to simplify and accelerate the process of deploying and managing your machine learning models.
