--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,16 +4,36 @@
     "baseUrl": "./src",
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "dist",
     "paths": {
       "*": [
         "node_modules/*",
       ],
-    }
+    },
+    "alwaysStrict": true,
+    "charset": "utf8",
+    "declaration": true,
+    "experimentalDecorators": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "lib": [
+      "es2016"
+    ],
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": false,
+    "noImplicitThis": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "resolveJsonModule": true,
+    "strict": true,
+    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
+    "stripInternal": true,
+    "target": "ES2017"
   },
   "include": [
     "src/**/*"
