RHODS-4032 Consistent category metadata for apps, quickstarts, docs. Includes the fix for https://github.com/red-hat-data-services/odh-dashboard/pull/222 and feedback from @bdattoma.

--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: anaconda-ce
+  annotations:
+    opendatahub.io/categories: 'Package management,Notebook environments'
 spec:
   displayName: Anaconda Professional
   provider: Anaconda
