--- a/data/applications/seldon.yaml
+++ b/data/applications/seldon.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: seldon-deploy
+  annotations:
+    opendatahub.io/categories: 'Model serving,Model monitoring'
 spec:
   displayName: Seldon Deploy
   provider: Seldon
