--- a/data/docs/auto-ai-experiment-model-tutorial.yaml
+++ b/data/docs/auto-ai-experiment-model-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: auto-ai-experiment-model-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving,Python'
+    opendatahub.io/categories: 'Model development,Model training'
 spec:
   appName: watson-studio
   displayName: Running an AutoAI experiment to build a model 
