--- a/data/docs/watson-studio-create-deployment-space-how-to.yaml
+++ b/data/docs/watson-studio-create-deployment-space-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: watson-studio-create-deployment-space-how-to
   type: how-to
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving'
+    opendatahub.io/categories: 'Model serving'
 spec:
   appName: watson-studio
   displayName: How to create a deployment space
