--- a/data/docs/watson-studio-create-project-how-to.yaml
+++ b/data/docs/watson-studio-create-project-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: watson-studio-create-project-how-to
   type: how-to
   annotations:
-    opendatahub.io/categories: 'Getting started'
+    opendatahub.io/categories: 'Getting started,Notebook environments'
 spec:
   appName: watson-studio
   displayName: How to create a project in Watson Studio
