--- a/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
+++ b/data/quickstarts/connect-rhosak-notebook-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: connect-rhosak-notebook
   annotations:
-    opendatahub.io/categories: 'Data management,Deployment,Jupyter notebook,Model serving,Python'
+    opendatahub.io/categories: 'Data management,Model development,Getting started'
 spec:
   displayName: Connecting to Red Hat OpenShift Streams for Apache Kafka
   appName: rhosak
