--- a/data/applications/aikit.yaml
+++ b/data/applications/aikit.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: aikit
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving'
+    opendatahub.io/categories: 'Data preprocessing,Model development'
 spec:
   displayName: Intel® oneAPI AI Analytics Toolkit Container
   provider: Intel®
