--- a/data/applications/pachyderm.yaml
+++ b/data/applications/pachyderm.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: pachyderm
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Data management,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Data management,Data preprocessing,Model training'
 spec:
   displayName: Pachyderm
   provider: Pachyderm
