--- a/data/applications/watson-studio.yaml
+++ b/data/applications/watson-studio.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: watson-studio
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Jupyter notebook,Model serving,Python'
+    opendatahub.io/categories: 'Model development,Model training,Data visualization,Data preprocessing,Notebook environment'
 spec:
   displayName: IBM Watson Studio
   provider: IBM
