--- a/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
+++ b/data/docs/jupyter-notebooks-in-watson-studio-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: jupyter-notebooks-in-watson-studio-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Notebook environments,Model development'
 spec:
   appName: watson-studio
   displayName: Using Jupyter notebooks in Watson Studio 
