--- a/data/docs/jupyterhub-install-python-packages-how-to.yaml
+++ b/data/docs/jupyterhub-install-python-packages-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: jupyterhub-install-python-packages
   type: how-to
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Package management,Notebook environments,Getting started'
 spec:
   displayName: How to install Python packages on your notebook server
   appName: jupyterhub
