--- a/data/docs/jupyterhub-update-server-settings-how-to.yaml
+++ b/data/docs/jupyterhub-update-server-settings-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: jupyterhub-update-server-settings
   type: how-to
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Notebook environments,Getting started'
 spec:
   displayName: How to update notebook server settings
   appName: jupyterhub
