--- a/data/docs/jupyterhub-use-s3-bucket-data-how-to.yaml
+++ b/data/docs/jupyterhub-use-s3-bucket-data-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: jupyterhub-use-s3-bucket-data
   type: how-to
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Data management,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Data management,Notebook environments'
 spec:
   displayName: How to use data from Amazon S3 buckets
   appName: jupyterhub
