--- a/data/docs/openvino-toolkit-ovms-serving.yaml
+++ b/data/docs/openvino-toolkit-ovms-serving.yaml
@@ -2,7 +2,7 @@ metadata:
   name: openvino-ovms-serving
   type: how-to
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Getting started,Model serving,TensorFlow,Python,PyTorch'
+    opendatahub.io/categories: 'Model serving,Getting started'
 spec:
   displayName: How to serve a model using OpenVINO Model Server
   appName: openvino
