--- a/data/docs/pachyderm-beginner-tutorial.yaml
+++ b/data/docs/pachyderm-beginner-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: pachyderm-beginner-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning, Pipeline'
+    opendatahub.io/categories: 'Data preprocessing,Data management,Model training,Getting started'
 spec:
   appName: pachyderm
   displayName: Getting started with Pachyderm concepts
