--- a/data/docs/pachyderm-house-pricing-example.yaml
+++ b/data/docs/pachyderm-house-pricing-example.yaml
@@ -2,7 +2,7 @@ metadata:
   name: pachyderm-house-pricing-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning, Pipeline, Python'
+    opendatahub.io/categories: 'Data management,Data preprocessing,Model training'
 spec:
   appName: pachyderm
   displayName: Training a regression model in Pachyderm
