--- a/data/docs/python-effective-pandas-tutorial.yaml
+++ b/data/docs/python-effective-pandas-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: python-effective-pandas-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Data management,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Model development,Data visualization,Data analysis'
 spec:
   appName: anaconda-ce
   displayName: Using Pandas for data analysis in Python 
