--- a/data/docs/python-gpu-numba-tutorial.yaml
+++ b/data/docs/python-gpu-numba-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: python-gpu-numba-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Model optimization,Model development'
 spec:
   appName: anaconda-ce
   displayName: GPU Computing in Python with Numba
