--- a/data/docs/python-scalable-computing-dask-tutorial.yaml
+++ b/data/docs/python-scalable-computing-dask-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: python-scalable-computing-dask-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python'
+    opendatahub.io/categories: 'Data analysis,Model optimization'
 spec:
   appName: anaconda-ce
   displayName: Using Dask for parallel data analysis 
