--- a/data/docs/python-scikit-learn-tutorial.yaml
+++ b/data/docs/python-scikit-learn-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: python-scikit-learn-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,Python,SciKit-Learn'
+    opendatahub.io/categories: 'Model development,Getting started'
 spec:
   appName: anaconda-ce
   displayName: Building machine learning models with scikit-learn 
