--- a/data/docs/seldon-model-servings-tutorial.yaml
+++ b/data/docs/seldon-model-servings-tutorial.yaml
@@ -2,7 +2,7 @@ metadata:
   name: seldon-model-servings-tutorial
   type: tutorial
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving,Python'
+    opendatahub.io/categories: 'Model serving'
 spec:
   appName: seldon-deploy
   displayName: Learning about model serving
