--- a/data/docs/seldon-operational-tasks-how-to.yaml
+++ b/data/docs/seldon-operational-tasks-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: seldon-operation-tasks-how-to
   type: how-to
   annotations:
-    opendatahub.io/categories: 'Getting started,Model serving'
+    opendatahub.io/categories: 'Model serving'
 spec:
   displayName: How to perform operational tasks
   appName: seldon-deploy
