--- a/data/docs/watson-studio-create-notebook-how-to.yaml
+++ b/data/docs/watson-studio-create-notebook-how-to.yaml
@@ -2,7 +2,7 @@ metadata:
   name: watson-studio-create-notebook-how-to
   type: how-to
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook'
+    opendatahub.io/categories: 'Notebook environments,Getting started'
 spec:
   appName: watson-studio
   displayName: How to create a notebook in Watson Studio
