--- a/data/quickstarts/create-jupyter-notebook-quickstart.yaml
+++ b/data/quickstarts/create-jupyter-notebook-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: create-jupyter-notebook
   annotations:
-    opendatahub.io/categories: 'Getting started,Jupyter notebook'
+    opendatahub.io/categories: 'Getting started,Notebook environments'
 spec:
   displayName: Creating a Jupyter notebook
   appName: jupyterhub
