--- a/data/quickstarts/deploy-python-model-quickstart.yaml
+++ b/data/quickstarts/deploy-python-model-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: deploy-python-model
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Jupyter notebook,Model serving,Python'
+    opendatahub.io/categories: 'Model serving,Getting started'
 spec:
   displayName: Deploying a sample Python application using Flask and OpenShift
   appName: jupyterhub
