--- a/data/quickstarts/deploy-watson-model-quickstart.yaml
+++ b/data/quickstarts/deploy-watson-model-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: build-deploy-watson-model
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Jupyter notebook,Model serving,Python'
+    opendatahub.io/categories: 'Model development,Model serving,Getting started,Model training'
 spec:
   displayName: Deploying a model with Watson Studio
   appName: watson-studio
