--- a/data/quickstarts/gpu-enabled-notebook-quickstart.yaml
+++ b/data/quickstarts/gpu-enabled-notebook-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: gpu-enabled-notebook-quickstart
   annotations:
-    opendatahub.io/categories: 'Getting started,GPUs,Python'
+    opendatahub.io/categories: 'Getting started,Model development'
 spec:
   displayName: Creating a Machine Learning Model using the NVIDIA GPU Add-on.
   appName: nvidia
