--- a/data/quickstarts/oneapi-aikit-notebook.yaml
+++ b/data/quickstarts/oneapi-aikit-notebook.yaml
@@ -3,10 +3,10 @@ kind: ConsoleQuickStart
 metadata:
   name: create-aikit-notebook
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,Python,oneAPI,SciKit-Learn,Pandas,TensorFlow,PyTorch,Modin,LPOT'
+    opendatahub.io/categories: 'Model development,Model training,Data preprocessing,Notebook environments,Getting started'
 
 spec:
-  displayName: Using the Intel® oneAPI AI Analytics Toolkit (AI Kit) notebook
+  displayName: Using the Intel® oneAPI AI Analytics Toolkit (AI Kit) notebook 
   appName: aikit
   durationMinutes: 15
   icon: 'images/oneapi-aikit.png'
@@ -87,7 +87,7 @@ spec:
       review:
         instructions: |-
           #### Verify that the sample notebook ran successfully
-          Did all cells of the notebook run successfully and printed out the statement "[CODE\_SAMPLE\_COMPLETED\_SUCCESFULLY]" at the end?
+          Did all cells of the notebook run successfully and printed out the statement "[CODE\_SAMPLE\_COMPLETED\_SUCCESSFULLY]" at the end?
         failedTaskHelp:
           This task is not verified yet. Try the task again.
       summary:
