--- a/data/quickstarts/openvino-inference-notebook.yaml
+++ b/data/quickstarts/openvino-inference-notebook.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: openvino-inference-notebook
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,TensorFlow,Python,PyTorch'
+    opendatahub.io/categories: 'Getting started,Model optimization,Data preprocessing'
 
 spec:
   displayName: Using the OpenVINO toolkit 
