--- a/data/quickstarts/pachyderm-beginner-tutorial-notebook.yaml
+++ b/data/quickstarts/pachyderm-beginner-tutorial-notebook.yaml
@@ -2,8 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: pachyderm-beginner-tutorial-notebook
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,Pipeline,Python'
-
+    opendatahub.io/categories: 'Data management,Data preprocessing,Model training,Getting started,Notebook environments'
 spec:
   displayName: Importing Pachyderm Beginner Tutorial Notebook
   appName: pachyderm
