--- a/data/quickstarts/seldon-deploy-drift-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-drift-quickstart.yaml
@@ -2,7 +2,7 @@ kind: ConsoleQuickStart
 metadata:
   name: seldon-deploy-model-drift
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving,Monitoring,Python'
+    opendatahub.io/categories: 'Model development,Model serving,Model monitoring,Model optimization,Getting started'
 spec:
   displayName: Monitoring a deployed model for drift 
   appName: seldon-deploy
